Добавлен переход по меню для заказа

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
 config.py
+database/108.db
+database/113.db
+database/115.db
+database/118.db
+database/119.db
+database/120.db
+database/122.db
+database/124.db
+database/125.db
+database/126.db
+database/127.db
+database/128.db
+database/129.db
+database/130.db
+database/131.db
+database/132.db
+database/133.db
+database/134.db
+database/135.db
+database/136.db
+database/137.db
+database/141.db
+database/142.db
+database/150.db
+database/151.db
+database/152.db
